fix(menu): menu height on mobile

--- a/src/components/menu/index.module.scss
+++ b/src/components/menu/index.module.scss
@@ -15,6 +15,7 @@
         right: 1em;
         max-width: calc(100vw - 2em);
         width: 100%;
+        max-height: calc(100vh - 2em);
     }
 
     .main {
@@ -29,6 +30,8 @@
         @media screen and (max-width: 570px) {
             max-width: 100%;
             overflow-x: auto;
+            overflow-y: hidden;
+            height: min-content;
         }
     }
 
@@ -43,7 +46,7 @@
         position: relative;
 
         @media screen and (max-width: 500px) {
-            height: 300px;
+            // max-height: 100%;
             width: 100%;
         }
 
